# swarm-optimization

./: CMakeLists.txt  README.txt
config/: lubot_swarm.argos  pathfinding.argos
controllers/: CMakeLists.txt  GridModel.cpp  GridModel.h  PQueue.h  lubot-controller.cpp  lubot-controller.h  pathfindbot-controller.cpp  pathfindbot-controller.h
experiments/: flocking_obstacles.argos  pathfinding.argos
loop_functions/: CMakeLists.txt  flocking_loop_functions.cpp  flocking_loop_functions.h  flocking_qt_user_functions.cpp  flocking_qt_user_functions.h
